--- a/index.css
+++ b/index.css
@@ -1,14 +1,14 @@
 /*html, body, p { width: 100%; display: block; margin: 0px; padding: 0px; }*/
 
 body {
-    padding: 10px;
+    padding: 50px;
     background-color: hsl(0,0%,95%);
-    font-family: "Lucida Grande", "Lucida Sans Unicode", Verdana, Arial, Helvetica, sans-serif;
+    font-family: Open Sans;
 }
 
 .prettyprint {
-    font-family: "Lucida Console", "Lucida Sans Typewriter", Monaco, "Bitstream Vera Sans Mono", monospace;
-    font-size: 12px;
+    font-family: Open Sans;
+    font-size: 11px;
     border-radius: 10px;
     border-left: 1px solid #999;
     padding-left: 20px;
@@ -39,5 +39,13 @@ p {
     font-size: 11px;
     text-align: center;
     padding-bottom: 10px;
+}
+
+a:link {
+	color: #800000;
+}
+
+a:visited {
+	color: #696969;
 }
 
